deploy/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fedlify-web
  labels:
    app.kubernetes.io/name: fedlify-web
spec:
  selector:
    app.kubernetes.io/name: fedlify-web
  ports:
    - name: http
      port: 80
      targetPort: http
